--- a/.github/linters/.mega-linter.yml
+++ b/.github/linters/.mega-linter.yml
@@ -12,7 +12,7 @@ DISABLE_ERRORS_LINTERS:
 DISABLE_LINTERS:
   - SPELL_CSPELL
   - SPELL_LYCHEE
-MARKDOWN_FILTER_REGEX_EXCLUDE: '(LICENSE\.md|NEWS\.md)'
+MARKDOWN_FILTER_REGEX_EXCLUDE: '(LICENSE\.md|NEWS\.md|codemeta\.json)'
 MARKDOWN_MARKDOWN_LINK_CHECK_DISABLE_ERRORS: true
 PRE_COMMANDS:
   - command: R --slave -e 'install.packages(c("lintr"))'
