improve exact mass annotation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -71,8 +71,7 @@ Collate:
     'clean_collapse.R'
     'clean_chemo.R'
     'complement_metadata_structures.R'
-    'create_adducts_neg.R'
-    'create_adducts_pos.R'
+    'create_adducts.R'
     'create_components.R'
     'create_dir.R'
     'create_edges.R'
