--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,7 @@ export(clean_chemo)
 export(clean_collapse)
 export(columns_model)
 export(complement_metadata_structures)
-export(create_adducts_neg)
-export(create_adducts_pos)
+export(create_adducts)
 export(create_components)
 export(create_dir)
 export(create_edges)
