--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -18,7 +18,7 @@ permissions:
   checks: write
   contents: write
   deployments: write
-  id-token: read
+  id-token: write
   issues: read
   discussions: read
   packages: write
