--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,6 +17,7 @@ Depends:
 Imports:
     bs4Dash (>= 2.3.0),
     crayon (>= 1.5.2),
+    desc (>= 1.4.2),
     docopt (>= 0.7.1),
     dplyr (>= 1.1.3),
     DT (>= 0.29),
