--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,8 @@ export(export_spectra)
 export(export_spectra_2)
 export(extract_spectra)
 export(fake_annotations_columns)
+export(fake_ecmdb)
+export(fake_lotus)
 export(fake_sop_columns)
 export(filter_annotations)
 export(get_example_sirius)
