--- a/inst/params/default/prepare_features_components.yaml
+++ b/inst/params/default/prepare_features_components.yaml
@@ -8,7 +8,7 @@ files:
       #' Components files.
       components:
         #' Raw components file. STRING
-        raw: data/interim/features/example_components.tsv.gz
+        raw: data/interim/features/example_components.tsv
 
         #' Prepared components file. STRING
-        prepared: data/interim/features/example_components_prepared.tsv.gz
+        prepared: data/interim/features/example_components_prepared.tsv
