--- a/inst/params/default/weight_annotations.yaml
+++ b/inst/params/default/weight_annotations.yaml
@@ -77,12 +77,12 @@ files:
       #' Components files.
       components:
         #' Prepared edges file. STRING
-        prepared: data/interim/features/example_components_prepared.tsv.gz
+        prepared: data/interim/features/example_components_prepared.tsv
 
       #' Edges files.
       edges:
         #' Prepared edges file. STRING
-        prepared: data/interim/features/example_edges.tsv.gz
+        prepared: data/interim/features/example_edges.tsv
 
   #' Taxa files.
   taxa:
