less GNPS dependency by default

--- a/inst/params/default/filter_annotations.yaml
+++ b/inst/params/default/filter_annotations.yaml
@@ -12,7 +12,7 @@ files:
       #' List of prepared structural annotations. STRING
       structural:
         - data/interim/annotations/example_ms1_prepared.tsv.gz
-        - data/interim/annotations/example_gnps_prepared.tsv.gz
+        # - data/interim/annotations/example_gnps_prepared.tsv.gz
         - data/interim/annotations/example_spectral_matches_prepared.tsv.gz
         - data/interim/annotations/example_sirius_prepared.tsv.gz
 
