--- a/inst/params/prepare_params.yaml
+++ b/inst/params/prepare_params.yaml
@@ -15,7 +15,7 @@ files:
     #' Can contain MS1 and/or MS2 spectra. STRING
     raw: data/source/example_spectra.mgf
 ms:
-  #' The polarity used. Must be either "classical" or "fbmn". STRING
+  #' The polarity used. Must be either "pos" or "neg". STRING
   polarity: pos
 organisms:
   #' If your experiment contains a single taxon, its scientific name.
