--- a/inst/params/default/weight_annotations.yaml
+++ b/inst/params/default/weight_annotations.yaml
@@ -84,8 +84,8 @@ files:
         #' Prepared edges file. STRING
         prepared: data/interim/features/example_edges.tsv
 
-  #' Taxa files.
-  taxa:
+  #' Metadata files.
+  metadata:
     #' Taxonomically informed features file. STRING
     prepared: data/interim/taxa/example_taxed.tsv.gz
 
