--- a/inst/params/default/prepare_annotations_gnps.yaml
+++ b/inst/params/default/prepare_annotations_gnps.yaml
@@ -5,15 +5,17 @@ files:
   annotations:
     #' Raw annotations files.
     raw:
-      #' List of spectral matching results. STRING
+      #' List of spectral matching results.
       spectral:
-        - data/interim/annotations/example_gnps.tsv
+        #' GNPS spectral matching results. STRING
+        gnps: data/interim/annotations/example_gnps.tsv
 
     #' List of prepared annotations.
     prepared:
-      #' List of prepared structural annotations. STRING
+      #' List of prepared structural annotations.
       structural:
-        - data/interim/annotations/example_gnps_prepared.tsv.gz
+        #' Prepared GNPS structural annotations. STRING
+        gnps: data/interim/annotations/example_gnps_prepared.tsv.gz
 
   #' Libraries files.
   libraries:
