--- a/inst/params/default/filter_annotations.yaml
+++ b/inst/params/default/filter_annotations.yaml
@@ -9,12 +9,16 @@ files:
 
     #' List of prepared annotations.
     prepared:
-      #' List of prepared structural annotations. STRING
+      #' List of prepared structural annotations.
       structural:
-        - data/interim/annotations/example_ms1_prepared.tsv.gz
-        # - data/interim/annotations/example_gnps_prepared.tsv.gz
-        - data/interim/annotations/example_spectral_matches_prepared.tsv.gz
-        - data/interim/annotations/example_sirius_prepared.tsv.gz
+        #' Prepared GNPS structural annotations. STRING
+        # gnps: data/interim/annotations/example_gnps_prepared.tsv.gz
+        #' Prepared MS1 structural annotations. STRING
+        ms1: data/interim/annotations/example_ms1_prepared.tsv.gz
+        #' Prepared SIRIUS structural annotations. STRING
+        sirius: data/interim/annotations/example_sirius_prepared.tsv.gz
+        #' Prepared SPECTRAL structural annotations. STRING
+        spectral: data/interim/annotations/example_spectral_matches_prepared.tsv.gz
 
   #' Features files.
   features:
