--- a/inst/params/default/prepare_libraries_rt.yaml
+++ b/inst/params/default/prepare_libraries_rt.yaml
@@ -23,9 +23,10 @@ files:
 
     #' Structure organism pairs libraries.
     sop:
-      #' List of prepared structure organism pairs libraries. STRING
+      #' List of prepared structure organism pairs libraries.
       prepared:
-        - data/interim/libraries/sop/rt_prepared.tsv.gz
+        #' RT prepared structure organism pairs libraries. STRING
+        rt: data/interim/libraries/sop/rt_prepared.tsv.gz
 
     #' Temporal libraries. STRING
     temporal:
