--- a/inst/params/default/prepare_libraries_sop_merged.yaml
+++ b/inst/params/default/prepare_libraries_sop_merged.yaml
@@ -5,12 +5,16 @@ files:
   libraries:
     #' Structure organism pairs libraries.
     sop:
-      #' List of prepared structure organism pairs libraries. STRING
+      #' List of prepared structure organism pairs libraries.
       prepared:
-        - data/interim/libraries/sop/closed_prepared.tsv.gz
-        - data/interim/libraries/sop/ecmdb_prepared.tsv.gz
-        - data/interim/libraries/sop/lotus_prepared.tsv.gz
-        - data/interim/libraries/sop/rt_prepared.tsv.gz
+        #' Closed prepared structure organism pairs library. STRING
+        closed: data/interim/libraries/sop/closed_prepared.tsv.gz
+        #' ECMDB prepared structure organism pairs library. STRING
+        ecmdb: data/interim/libraries/sop/ecmdb_prepared.tsv.gz
+        #' Lotus prepared structure organism pairs library. STRING
+        lotus: data/interim/libraries/sop/lotus_prepared.tsv.gz
+        #' RT prepared structure organism pairs library. STRING
+        rt: data/interim/libraries/sop/rt_prepared.tsv.gz
 
       #' Merged structure organism pairs library.
       merged:
