--- a/inst/params/default/prepare_features_tables.yaml
+++ b/inst/params/default/prepare_features_tables.yaml
@@ -17,5 +17,7 @@ names:
   #' Name of "precursor m/z" variable in the input. STRING
   precursor: row m/z
 
-  #' Name of "retention time" variable in the input. STRING
-  rt: row retention time
+  #' Name of "retention time" variable.
+  rt: 
+    #' Name of "retention time" variable in the feature table. STRING
+    features: rt
