--- a/inst/params/default/prepare_libraries_rt.yaml
+++ b/inst/params/default/prepare_libraries_rt.yaml
@@ -56,8 +56,10 @@ names:
     #' Name of "SMILES" in MGF. STRING
     smiles: SMILES
 
-  #' Name of "retention time" variable in the input. STRING
-  rt: rt
+  #' Name of "retention time" variable.
+  rt: 
+    #' Name of "retention time" variable in the library. STRING
+    library: rt
 
   #' Name of "SMILES" variable in the input. STRING
   smiles: smiles
