--- a/inst/params/prepare_params_advanced.yaml
+++ b/inst/params/prepare_params_advanced.yaml
@@ -86,7 +86,7 @@ files:
   #' Features files.
   features:
     #' Raw features file. STRING
-    raw: data/source/features.tsv.gz
+    raw: data/source/example_features.csv
 
     #' Prepared features file. STRING
     prepared: data/interim/features/example_features.tsv.gz
