Canonicalize similarity threshold parameter

--- a/inst/params/default/annotate_spectra.yaml
+++ b/inst/params/default/annotate_spectra.yaml
@@ -8,8 +8,10 @@ annotations:
   thresholds:
     #' MS2 annotation related parameters.
     ms2:
-      #' For similarity. FLOAT
-      similarity: 0.0
+      #' For similarity.
+      similarity:
+        #' For annotation. FLOAT
+        annotation: 0.0
 
 #' Files.
 files:
