--- a/inst/params/prepare_params_advanced.yaml
+++ b/inst/params/prepare_params_advanced.yaml
@@ -32,8 +32,13 @@ annotations:
 
     #' MS2 annotation related parameters.
     ms2:
-      #' For similarity. FLOAT
-      similarity: 0.2
+      #' For similarity.
+      similarity:
+        #' For annotation. FLOAT
+        annotation: 0.0
+
+        #' For edges. FLOAT
+        edges: 0.7
 
 #' Files.
 files:
