--- a/inst/params/default/prepare_taxa.yaml
+++ b/inst/params/default/prepare_taxa.yaml
@@ -8,8 +8,9 @@ files:
 
   #' Metadata files.
   metadata:
-    #' OPTIONAL. If not all features forced to a single taxon. (see below)
-    #' Biological origin metadata file. STRING
+    #' The path to the file containing your metadata.
+    #' Must be formatted accordingly.
+    #' If your experiment contains a single taxon, you can provide it below instead. STRING
     raw: data/source/example_metadata.tsv
 
     #' Taxonomically informed features file. STRING
@@ -47,6 +48,8 @@ organisms:
   #' Number of organisms to keep per feature. INTEGER
   candidates: 1
 
-  #' OPTIONAL. Force all features to be attributed to given taxon.
+  #' OPTIONAL. If your experiment contains a single taxon, its scientific name.
+  #' Else, you will need to provide a metadata file above.
+  #' If you provide both, this one will have priority.
   #' Example: "Homo sapiens". STRING
   taxon: ~
