--- a/.github/workflows/archive-github-pages.yml
+++ b/.github/workflows/archive-github-pages.yml
@@ -10,6 +10,21 @@ on:
     types: [published]
   workflow_dispatch:
 
+permissions:
+  actions: write
+  checks: write
+  contents: write
+  deployments: write
+  id-token: write
+  issues: read
+  discussions: read
+  packages: write
+  pages: write
+  pull-requests: read
+  repository-projects: read
+  security-events: read
+  statuses: read
+
 jobs:
   run-waystation:
     name: Run Waystation
