feat. Extract structures from spectral libraries (#113)

--- a/inst/params/default/prepare_libraries_sop_merged.yaml
+++ b/inst/params/default/prepare_libraries_sop_merged.yaml
@@ -15,6 +15,8 @@ files:
         lotus: data/interim/libraries/sop/lotus_prepared.tsv.gz
         #' RT prepared structure organism pairs library. STRING
         rt: data/interim/libraries/sop/rt_prepared.tsv.gz
+        #' Spectral prepared structure organism pairs library. STRING
+        spectral: data/interim/libraries/sop/spectral_prepared.tsv.gz
 
       #' Merged structure organism pairs library.
       merged:
