Add HMDB structures

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -90,6 +90,7 @@ Collate:
     'extract_spectra.R'
     'fake_annotations_columns.R'
     'fake_ecmdb.R'
+    'fake_hmdb.R'
     'fake_lotus.R'
     'fake_sop_columns.R'
     'filter_annotations.R'
@@ -120,8 +121,10 @@ Collate:
     'prepare_features_tables.R'
     'prepare_libraries_adducts.R'
     'prepare_libraries_rt.R'
+    'select_sop_columns.R'
     'prepare_libraries_sop_closed.R'
     'prepare_libraries_sop_ecmdb.R'
+    'prepare_libraries_sop_hmdb.R'
     'prepare_libraries_sop_lotus.R'
     'split_tables_sop.R'
     'prepare_libraries_sop_merged.R'
@@ -129,7 +132,6 @@ Collate:
     'prepare_params.R'
     'prepare_taxa.R'
     'replace_id.R'
-    'select_sop_columns.R'
     'taxize_spectra_benchmark.R'
     'weight_chemo.R'
     'weight_bio.R'
