--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(export_spectra_2)
 export(extract_spectra)
 export(fake_annotations_columns)
 export(fake_ecmdb)
+export(fake_hmdb)
 export(fake_lotus)
 export(fake_sop_columns)
 export(filter_annotations)
@@ -57,6 +58,7 @@ export(prepare_libraries_adducts)
 export(prepare_libraries_rt)
 export(prepare_libraries_sop_closed)
 export(prepare_libraries_sop_ecmdb)
+export(prepare_libraries_sop_hmdb)
 export(prepare_libraries_sop_lotus)
 export(prepare_libraries_sop_merged)
 export(prepare_libraries_spectra)
