--- a/inst/params/default/filter_annotations.yaml
+++ b/inst/params/default/filter_annotations.yaml
@@ -41,3 +41,8 @@ ms:
     rt:
       #' Retention time tolerance in minutes. FLOAT
       minutes: 0.05
+
+#' Options.
+options:
+  #' Nitrogen rule. BOOLEAN
+  nitrogen_rule: yes
