--- a/inst/params/prepare_params_advanced.yaml
+++ b/inst/params/prepare_params_advanced.yaml
@@ -637,5 +637,8 @@ options:
   #' Do not use it. BOOLEAN
   force: no
 
+  #' Nitrogen rule. BOOLEAN
+  nitrogen_rule: yes
+
   #' Summarise results to one row per feature. BOOLEAN
   summarise: no
