Add Nitrogen rule

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(fake_hmdb)
 export(fake_lotus)
 export(fake_sop_columns)
 export(filter_annotations)
+export(filter_nitrogen_rule)
 export(get_example_sirius)
 export(get_file)
 export(get_gnps_tables)
