--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,7 @@ Imports:
     shinyhelper (>= 0.3.2),
     shinyjs (>= 2.1.0),
     shinyvalidate (>= 0.1.3),
-    shinyWidgets (>= 0.8.2),
+    shinyWidgets (>= 0.8.3),
     Spectra (>= 1.12.0),
     stats,
     stringi (>= 1.8.3),
@@ -61,6 +61,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Collate:
     'round_reals.R'
+    'filter_nitrogen_rule.R'
     'dist_groups.R'
     'decorate_masses.R'
     'annotate_masses.R'
