--- a/.github/workflows/rhub.yaml
+++ b/.github/workflows/rhub.yaml
@@ -5,23 +5,17 @@
 # rhub::rhub_setup()
 #
 # It is unlikely that you need to modify this file manually.
-
+---
 name: R-hub
+
+permissions: read-all
+
 run-name: "${{ github.event.inputs.id }}: ${{ github.event.inputs.name || format('Manually run by {0}', github.triggering_actor) }}"
 
 on:
   workflow_dispatch:
     inputs:
-      config:
-        description: 'A comma separated list of R-hub platforms to use.'
-        type: string
-        default: 'linux,windows,macos'
-      name:
-        description: 'Run name. You can leave this empty now.'
-        type: string
-      id:
-        description: 'Unique ID. You can leave this empty now.'
-        type: string
+      config: "linux,windows,macos"
 
 jobs:
 
