--- a/tests/testthat/.gitignore
+++ b/tests/testthat/.gitignore
@@ -1,6 +1,3 @@
-# Ignore everything
-*
-
-# But not these files...
-!.gitignore
-!test_functions.R
+# {shinytest2}: Ignore new debug snapshots for `$expect_values()`
+*_.new.png
+data/
