--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,darwin/arm64
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -48,7 +48,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           context: .
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64,darwin/arm64
           push: true
           tags: ${{ env.LATEST_TAG }}
 
