--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,12 +31,12 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
-          platforms: linux/amd64,darwin/arm64
+          platforms: linux/amd64,linux/arm64
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
-          platforms: linux/amd64,darwin/arm64
+          platforms: linux/amd64,ubuntu/arm64
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -50,7 +50,7 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           context: .
-          platforms: linux/amd64,darwin/arm64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ env.LATEST_TAG }}
 
