fix Docker ARM image

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Set up Docker
+        uses: crazy-max/ghaction-setup-docker@v3
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
