--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -30,7 +30,11 @@ jobs:
           Ncpus: 2
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::covr
+          extra-packages:  |
+            any::covr
+            any::shinytest2
+            any::spelling
+            any::testthat
           needs: coverage
       - name: Test coverage
         run: |
