--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: timaR
 Title: Taxonomically Informed Metabolite Annotation
-Version: 2.9.3
+Version: 2.9.4
 Authors@R: c(
     person("Adriano", "Rutz", , "rutz@imsb.biol.ethz.ch", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-0443-9902")),
@@ -30,20 +30,20 @@ Imports:
     msentropy (>= 0.1.4),
     pbapply (>= 1.7.2),
     pingr (>= 2.0.3),
-    R.utils,
+    R.utils (>= 2.12.3),
     rotl (>= 3.1.0),
     shiny (>= 1.8.1.1),
     shinybusy (>= 0.3.3),
     shinyhelper (>= 0.3.2),
     shinyjs (>= 2.1.0),
     shinyvalidate (>= 0.1.3),
-    shinyWidgets (>= 0.8.4),
+    shinyWidgets (>= 0.8.5),
     Spectra (>= 1.12.0),
     stats,
     stringi (>= 1.8.3),
-    targets (>= 1.6.0),
+    targets (>= 1.7.0),
     tidytable (>= 0.11.0),
-    tidyfst (>= 1.7.7),
+    tidyfst (>= 1.7.8),
     utils,
     visNetwork (>= 2.1.2),
     yaml (>= 2.3.8)
